--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,5 @@ Depends:
 LazyData: true
 Remotes: github::paezha/isdas
 Imports: 
-    tibble, raster (>= 3.5), data.table (>= 1.14.0), sf (>= 1.0-8),
+    tibble, raster, data.table (>= 1.14.0), sf,
     giscoR (>= 0.3.1), mapSpain (>= 0.6.1), remotes (>= 2.4.2), isdas
