--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,5 @@ Depends:
 LazyData: true
 Remotes: github::paezha/isdas
 Imports: 
-    tibble, raster, data.table (>= 1.14.0), sf, here,
+    tibble, raster, data.table (>= 1.14.0), fs, sf, terra, here,
     giscoR (>= 0.3.1), mapSpain (>= 0.6.1), remotes (>= 2.4.2)
