--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,5 @@ LazyData: true
 Remotes: github::paezha/isdas
 Imports: 
     tibble, raster, data.table (>= 1.14.0), fs, sf, terra, here,
-    giscoR (>= 0.3.1), mapSpain (>= 0.6.1), remotes (>= 2.4.2)
+    readxl, giscoR (>= 0.3.1), mapSpain (>= 0.6.1), 
+    remotes (>= 2.4.2)
