EN_declaracion y parados_clm

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,4 +17,5 @@ Remotes: github::paezha/isdas
 Imports: 
     tibble, raster, data.table (>= 1.14.0), fs, sf, terra, here,
     readxl, giscoR (>= 0.3.1), mapSpain (>= 0.6.1), caret, rpart,  
-    rpart.plot, randomForest, e1071, remotes (>= 2.4.2), klaR
+    rpart.plot, randomForest, e1071, remotes (>= 2.4.2), klaR,
+    readr
